--- a/prime-car/src/Components/Layout-Components/NavBar.css
+++ b/prime-car/src/Components/Layout-Components/NavBar.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.cdnfonts.com/css/american-captain');
+@import url('https://fonts.cdnfonts.com/css/sf-pro-display');
+
 nav{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -8,6 +11,7 @@ nav span{
     font-weight: 400;
     font-size: 56px;
     line-height: 56px;
+    color: #000;
     /*color: #FFFFFF;*/
     padding-left: 10%;
 }
@@ -21,6 +25,7 @@ nav ul li a{
     font-weight: 600;
     font-size: 24px;
     line-height: 29px;
+    color: #000000;
     /*color: #FFFFFF;*/
     text-decoration: none;
 }
@@ -33,11 +38,12 @@ nav ul li a{
 
 .button{
     display: flex;
-    justify-content: end;
+    justify-content: space-evenly;
     padding-right: 17%;
 }
 
 .button li a{
+    border: 1px solid black;
     /*border: 1px solid white;*/
     padding: 5px 30px;
     border-radius: 8px;
