--- a/prime-car/src/Components/Layout-Components/NavBar.css
+++ b/prime-car/src/Components/Layout-Components/NavBar.css
@@ -6,7 +6,7 @@ nav{
     grid-template-columns: repeat(3, 1fr);
 }
 
-nav span{
+.logo li a{
     font-family: 'American Captain';
     font-weight: 400;
     font-size: 56px;
@@ -32,13 +32,15 @@ nav ul li a{
 
 .navbutton{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     justify-content: center;
+    align-items: center;
 }
 
 .button{
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     padding-right: 17%;
 }
 
