--- a/prime-car/src/Components/Main-Components/Header.css
+++ b/prime-car/src/Components/Main-Components/Header.css
@@ -2,5 +2,49 @@
     background-image: url("../../img/Background.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 200vh;
+    background-size: 100%;
+}
+
+.headerText{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding-right: 6%;
+    color: white;
+}
+
+.headerText button a {
+    color: white;
+    text-decoration: none;
+}
+
+.headerText h1{
+    font-family: 'American Captain';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 130px;
+    text-align: right;
+    width: 50%;
+    margin: 0 0 auto;
+}
+
+.headerText h3{
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 26px;
+    line-height: 38px;
+    text-align: right;
+    width: 18.28%;
+    margin-top: 0;
+}
+
+.headerText button{
+    background: none;
+    border: 2px solid white;
+    border-radius: 8px;
+    color: white;
+    font-weight: bold;
+    padding: 12px 28px;
+    margin-bottom: 7%;
 }
