--- a/prime-car/src/Components/Layout-Components/NavBar/NavBar.css
+++ b/prime-car/src/Components/Layout-Components/NavBar/NavBar.css
@@ -11,8 +11,6 @@ nav{
     font-weight: 400;
     font-size: 56px;
     line-height: 56px;
-    /*color: #FFFFFF;*/
-    color: #000;
     padding-left: 10%;
 }
 
@@ -25,8 +23,7 @@ nav ul li a{
     font-weight: 600;
     font-size: 24px;
     line-height: 29px;
-    /*color: #FFFFFF;*/
-    color: #000;
+    color: #FFFFFF;
     text-decoration: none;
 }
 
@@ -45,8 +42,7 @@ nav ul li a{
 }
 
 .button li a{
-    /*border: 1px solid white;*/
-    border: 1px solid black;
+    border: 1px solid white;
     padding: 5px 30px;
     border-radius: 8px;
 }
