--- a/prime-car/src/Components/Layout-Components/NavBar.css
+++ b/prime-car/src/Components/Layout-Components/NavBar.css
@@ -11,6 +11,8 @@ nav{
     font-weight: 400;
     font-size: 56px;
     line-height: 56px;
+    /*color: #FFFFFF;*/
+    color: #000;
     padding-left: 10%;
 }
 
@@ -23,7 +25,8 @@ nav ul li a{
     font-weight: 600;
     font-size: 24px;
     line-height: 29px;
-    color: #FFFFFF;
+    /*color: #FFFFFF;*/
+    color: #000;
     text-decoration: none;
 }
 
@@ -42,7 +45,8 @@ nav ul li a{
 }
 
 .button li a{
-    border: 1px solid white;
+    /*border: 1px solid white;*/
+    border: 1px solid black;
     padding: 5px 30px;
     border-radius: 8px;
 }
