--- a/prime-car/src/index.css
+++ b/prime-car/src/index.css
@@ -1,8 +1,5 @@
 body {
-  max-width: 2000px;
-  margin: 0 auto;
-  padding: 0;
-  background-color: #161616;
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -13,33 +10,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-h1{
-  font-family: 'American Captain';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 130px;
-  color: white;
-}
-
-h2{
-  font-family: 'SF Pro Display';
-  font-weight: 700;
-}
-
-h3{
-  font-family: 'SF Pro Display';
-  font-style: normal;
-  font-weight: 400;
-  color: white;
-}
-
-p{
-  font-family: 'SF Pro Display';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 29px;
-  color: #FFFFFF;
 }
