--- a/prime-car/src/Components/Main-Components/Car/Car.css
+++ b/prime-car/src/Components/Main-Components/Car/Car.css
@@ -1,15 +1,16 @@
-.cars h1{
+.cars h1 {
     text-align: center;
     margin: 50px 50px 20px;
     font-size: 110px;
 }
 
-.cars p{
+.cars p {
     text-align: center;
     margin: 20px 50px 2em;
 }
 
-.cars div.structure2{
-    width: 69%;
+.cars div.structure2 {
+    width: 100%;
     margin-top: 0;
+    overflow: hidden;
 }
