--- a/prime-car/src/index.css
+++ b/prime-car/src/index.css
@@ -1,3 +1,18 @@
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+    border: none;
+    -webkit-text-fill-color: white;
+    -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+    transition: background-color 5000s ease-in-out 0s;
+}
+
 body {
     max-width: 2000px;
     margin: 0 auto;
@@ -42,8 +57,4 @@ p {
     font-size: 24px;
     line-height: 29px;
     color: #FFFFFF;
-}
-
-SignIn nav {
-    grid-template-columns: repeat(1, 1fr);
 }
